@@ -337,8 +337,8 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
 
             if (jurorPool.getCourt() == null || jurorPool.getCourt().getLocCode() == null) {
                 throw new MojException.NotFound(
-                    String.format("Court location for pool member %s cannot be found",
-                                  jurorPool.getJurorNumber()), null);
+                    "Court location for pool member %s cannot be found".formatted(
+                        jurorPool.getJurorNumber()), null);
             }
 
             updateJurorHistory(jurorPool, jurorPool.getPoolNumber(), auditorUsername, JurorHistory.ADDED,
@@ -391,7 +391,7 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
 
         Optional<PoolRequest> poolRequestOpt = poolRequestRepository.findById(dto.getPoolNumber());
         PoolRequest poolRequest = poolRequestOpt.orElseThrow(() ->
-                 new MojException.NotFound(String.format("Cannot find pool request - %s", dto.getPoolNumber()), null));
+                 new MojException.NotFound("Cannot find pool request - %s".formatted(dto.getPoolNumber()), null));
 
         final LocalDate serviceStartDate = poolRequest.getReturnDate();
 
@@ -528,8 +528,6 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
                     printConfirmationLetter(payload.getOwner(), newJurorPool);
                 }
             }
-
-            jurorHistoryService.createPostponementLetterHistory(jurorPool, "", CommunicationChannel.LETTER);
 
             if (payload.getUserType() == UserType.BUREAU) {
                 printPostponementLetter(payload.getOwner(), jurorPool);
@@ -823,8 +821,8 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
 
         List<String> preferredDeferralDatesAsString = getPreferredDeferralDates(jurorNumber, payload);
         if (preferredDeferralDatesAsString.isEmpty()) {
-            throw new MojException.NotFound(String.format("Juror  %s: No deferral dates provided in the response ",
-                                                          jurorNumber), null);
+            throw new MojException.NotFound("Juror  %s: No deferral dates provided in the response ".formatted(
+                jurorNumber), null);
         }
 
         List<LocalDate> preferredDeferralDates = preferredDeferralDatesAsString.stream()
@@ -843,7 +841,7 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
     @Override
     public void deleteDeferral(BureauJwtPayload payload, String jurorNumber) {
 
-        String customErrorMessage = String.format("Cannot find deferred record for juror number %s - ", jurorNumber);
+        String customErrorMessage = "Cannot find deferred record for juror number %s - ".formatted(jurorNumber);
 
         JurorPool jurorPool = jurorPoolService.getJurorPoolFromUser(jurorNumber);
         JurorPoolUtils.checkOwnershipForCurrentUser(jurorPool, payload.getOwner());
@@ -874,9 +872,10 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
      * @param newPool         a Pool Request instance, owned by the Bureau
      * @param bureauDeferrals the number of bureau deferrals requested to be used in this Pool
      * @param userId          the current user's username (for auditing in history tables)
+     * @param isNewPool       whether the deferrals are being used for a new pool, or added to an existing pool
      */
     @Override
-    public int useBureauDeferrals(PoolRequest newPool, int bureauDeferrals, String userId) {
+    public int useBureauDeferrals(PoolRequest newPool, int bureauDeferrals, String userId, boolean isNewPool) {
         String owner = newPool.getOwner();
         String courtLocation = newPool.getCourtLocation().getLocCode();
         LocalDate attendanceDate = newPool.getReturnDate();
@@ -884,7 +883,8 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
         Iterator<CurrentlyDeferred> bureauDeferralsIterator = currentlyDeferredRepository
             .findAll(filterByCourtAndDate(owner, courtLocation, attendanceDate)).iterator();
 
-        int deferralsUsed = processBureauDeferredJurors(bureauDeferrals, bureauDeferralsIterator, newPool, userId);
+        int deferralsUsed = processBureauDeferredJurors(bureauDeferrals, bureauDeferralsIterator, newPool, userId,
+                                                        isNewPool);
         log.info("{} deferred juror(s) have been added to Pool: {}", deferralsUsed,
                                newPool.getPoolNumber()
         );
@@ -1006,8 +1006,8 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
 
         if (jurorPool.getCourt() == null || jurorPool.getCourt().getLocCode() == null) {
             throw new MojException.NotFound(
-                String.format("Court location for pool member %s cannot be found",
-                              jurorPool.getJurorNumber()), null);
+                "Court location for pool member %s cannot be found".formatted(
+                    jurorPool.getJurorNumber()), null);
         }
 
         String otherInfo = POSTPONE_REASON_CODE.equalsIgnoreCase(deferralReasonDto.getExcusalReasonCode())
@@ -1030,7 +1030,7 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
 
         // check to see whether the response has been completed already
         if (BooleanUtils.isTrue(jurorResponse.isProcessingComplete())) {
-            final String message = String.format("Response %s has been previously merged", jurorNumber);
+            final String message = "Response %s has been previously merged".formatted(jurorNumber);
             log.error("Response {} has previously been completed at {}", jurorNumber,
                       jurorResponse.getCompletedAt());
             throw new JurorResponseAlreadyCompletedException(message);
@@ -1082,9 +1082,9 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
 
     private int processBureauDeferredJurors(int deferralsRequested,
                                             Iterator<CurrentlyDeferred> bureauDeferralsIterator,
-                                            PoolRequest poolRequest, String userId) {
+                                            PoolRequest poolRequest, String userId, boolean isNewPool) {
         int deferralsUsed = processDeferredJurors(deferralsRequested, bureauDeferralsIterator, poolRequest, userId);
-        updatePoolHistory(poolRequest, deferralsUsed, userId);
+        updatePoolHistory(poolRequest, deferralsUsed, userId, isNewPool);
         return deferralsUsed;
     }
 
@@ -1184,10 +1184,12 @@ public class ManageDeferralsServiceImpl implements ManageDeferralsService {
         }
     }
 
-    private void updatePoolHistory(PoolRequest newPool, int deferralsUsed, String userId) {
+    private void updatePoolHistory(PoolRequest newPool, int deferralsUsed, String userId, boolean isNewPool) {
         if (deferralsUsed > 0) {
             poolHistoryRepository.save(new PoolHistory(newPool.getPoolNumber(), LocalDateTime.now(), HistoryCode.PHDI,
-                                                       userId, deferralsUsed + PoolHistory.NEW_POOL_REQUEST_SUFFIX));
+                                                       userId, deferralsUsed + (isNewPool
+                                                           ? PoolHistory.NEW_POOL_REQUEST_SUFFIX
+                                                           : PoolHistory.ADD_POOL_REQUEST_SUFFIX)));
         }
     }
 
