@@ -65,7 +65,7 @@ public final class DataUtils {
             jurorResponse = repositoryMod.findByJurorNumber(jurorNumber);
             if (jurorResponse == null) {
                 throw new MojException.NotFound(
-                    String.format("Juror: %s. Cannot find digital response", jurorNumber), null);
+                    "Juror: %s. Cannot find digital response".formatted(jurorNumber), null);
             }
         } catch (IllegalArgumentException ex) {
             throw new MojException.InternalServerError(String.format(
@@ -83,7 +83,7 @@ public final class DataUtils {
             jurorPaperResponse = repositoryMod.findByJurorNumber(jurorNumber);
             if (jurorPaperResponse == null) {
                 throw new MojException.NotFound(
-                    String.format("Juror: %s. Cannot find paper response", jurorNumber), null);
+                    "Juror: %s. Cannot find paper response".formatted(jurorNumber), null);
             }
         } catch (IllegalArgumentException ex) {
             throw new MojException.InternalServerError(String.format("Juror: %s. There were problems with searching "
